update font to roboto everywhere

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -22,7 +22,7 @@
     <link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/style.css?alt=media&token=10a5dcc2-3307-4df3-b452-c7a8dc404d25" rel="stylesheet">
 
 </head>
-<body>
+<body style="font-family: Roboto">
 <!--==========================
 Header
 ============================-->
