--- a/website/templates/posts.html
+++ b/website/templates/posts.html
@@ -1013,7 +1013,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
     <link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/responsive.css?alt=media&token=d4836aa6-2fd6-47c1-a3b2-526c74b911b0" rel="stylesheet" media="screen">
 </head>
 
-<body>
+<body style="font-family: Roboto">
 
 <section id="header_area">
     <div class="wrapper header">
