--- a/website/templates/projects.htm
+++ b/website/templates/projects.htm
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/nouislider.min.css?alt=media&token=1e4f10a8-53ff-49aa-8072-8ff3d3bdaf3b">
 		<link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/projects-style.css?alt=media&token=a67eeb19-4bcf-43fe-8c25-446393a33d66" rel="stylesheet">
 	</head>
-	<body class="h-100 m-0 bg-light">
+	<body style="font-family: Roboto" class="h-100 m-0 bg-light">
 		<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-success shadow-sm">
 			<a class="navbar-brand" href="#">COPS</a>
 
