--- a/website/templates/timeline.html
+++ b/website/templates/timeline.html
@@ -16,7 +16,7 @@
         <script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/modernizr.min.js?alt=media&token=a75b66b4-fc75-4947-9dd7-2e59c9b78e49"></script>
 
 	</head>
-	<body>
+	<body style="font-family: Roboto">
     
     <header class="site-header" id="top">
         <nav class="navbar navbar-default navbar-fixed-top">
