--- a/website/templates/markdown.html
+++ b/website/templates/markdown.html
@@ -38,7 +38,7 @@
     }
     </style>
 </head>
-<body>
+<body style="font-family: Roboto">
 
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
