--- a/website/templates/team.html
+++ b/website/templates/team.html
@@ -12,7 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         
     </head>
-    <body>
+    <body style="font-family: Roboto">
     <div class="container-fluid team_page">
         <div class="row" style="background-color:black">
             <div class="col-2">
