--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -30,19 +30,18 @@ Header
     <div class="container">
 
         <div id="logo" class="pull-left">
-            <a href="#hero"><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/logo64x64.jpg?alt=media&token=fbaa55c7-ce7b-4a12-ac90-33df1d1d9a9f" alt="" title=""/></a>
+            <a href="#hero"><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/logo.png?alt=media&token=8f365979-3c9e-4dc7-8ec1-a70e9d01eb4b" alt="" title=""/></a>
 
         </div>
 
         <nav id="nav-menu-container">
             <ul class="nav-menu">
-                <li class="menu-active waves-effect active" style="height:5px;"><a href="#hero">Home</a></li>
-                <li><a href="#about" class="btn waves-effect waves-brown waves-ripple">About</a></li>
-                <li><a href="#facts" class="btn waves-effect waves-brown waves-ripple">Stats</a></li>
+                <li><a href="/" class="btn waves-effect waves-brown waves-ripple">Home</a></li>
                 <li><a href="/projects" class="btn waves-effect waves-brown waves-ripple">Projects</a></li>
                 <li><a href="/posts" class="btn waves-effect waves-brown waves-ripple">Blogs</a></li>
                 <li><a href="/team" class="btn waves-effect waves-brown waves-ripple">Team</a></li>
-                <li><a href="/contact" class="btn waves-effect waves-brown waves-ripple">Contact Us</a></li>
+                <li><a href="/timeline" class="btn waves-effect waves-brown waves-ripple">Timeline</a></li>
+                <li><a href="#contact" class="btn waves-effect waves-brown waves-ripple">Contact</a></li>
             </ul>
         </nav><!-- #nav-menu-container -->
     </div>
