update timeline file

--- a/website/templates/timeline.html
+++ b/website/templates/timeline.html
@@ -9,15 +9,15 @@
 
         <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.css?alt=media&token=13c69f8e-23ae-4fad-8287-861f0d61a984">
         <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/font-awesome.min.css?alt=media&token=ddcb4c2b-c6e5-4e65-85b0-6a78fec28da1">
-        <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/templatemo-style.css?alt=media&token=6311d753-2851-4de5-bfc8-d024338bfe52">
+        <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/timeline%2Fcss%2Ftemplatemo-style.css?alt=media&token=e74bce49-aa73-49e3-9bbb-268b3d135511">
 
         <!-- JavaScripts -->
         <script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/jquery-1.10.2.min.js?alt=media&token=9899dadf-704b-4b19-bbce-14cc58179396"></script>
         <script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/modernizr.min.js?alt=media&token=a75b66b4-fc75-4947-9dd7-2e59c9b78e49"></script>
 
 	</head>
-	<body style="font-family: Roboto">
-    
+	<body>
+
     <header class="site-header" id="top">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
@@ -30,7 +30,7 @@
                             <a class="navbar-brand" href="#templatemo">
                                 <p>C<em>ops</em></p>
                             </a>
-                        </div>  
+                        </div>
                     </div>
                     <div class="collapse navbar-collapse" id="main-menu">
                         <ul class="nav navbar-nav navbar-right">
@@ -41,7 +41,7 @@
                             <li><span></span><a href="#third-section" class="contact">Contact</a></li>
                         </ul>
                     </div>
-                </div> 
+                </div>
             </div>
         </nav>
     </header>
@@ -53,7 +53,7 @@
                     <img id="computer" src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/computer1.jpg?alt=media&token=52d3d493-fd7b-4f22-8061-ea23710b4eca" alt="computer">
                 </div>
             </div>
-        </div>               
+        </div>
     </div>
 
 
@@ -63,7 +63,7 @@
                 <div class="col-md-12">
                     <h4>Timeline</h4>
                     <p>What we have done</p>
-                </div>   
+                </div>
             </div>
         </div>
     </div>
@@ -72,6 +72,9 @@
 
     <div id="second-section2">
         <div class="container">
+             <div class="row">
+                <div class="triangle"></div>
+            </div>
 
             <div class="row">
                 <div class="col-md-12">
@@ -151,40 +154,7 @@
         </div>
     </div>
 
-    
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-4">
-                            <div class="copyright-text">
-                                <p>Copyright &copy; <a href="#">All rights reserved by COPS</a></p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="back-to-top">
-                                <a href="#top">Back To Top</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="social-icons">
-                                <ul>
-                                    <li><a href="#" class="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#" class="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#" class="#"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#" class="#"><i class="fa fa-rss"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>    
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    
-		<!-- Javascripts -->
+            <!-- Javascripts -->
 
 		<script type="text/javascript" src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.js?alt=media&token=ba259738-151a-4ca7-88c8-177421d837bf"></script>
 		<script type="text/javascript" src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/custom.js?alt=media&token=cef55bbe-5266-41c5-9938-6123fdeb0f3f"></script>
