--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -28,7 +28,7 @@ Header
 ============================-->
 <header id="header">
     <div class="container">
-
+    <div>
         <div id="logo" class="pull-left">
             <a href="#hero"><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/logo.png?alt=media&token=8f365979-3c9e-4dc7-8ec1-a70e9d01eb4b" alt="" title=""/></a>
 
@@ -36,15 +36,18 @@ Header
 
         <nav id="nav-menu-container">
             <ul class="nav-menu">
-                <li><a href="/" class="btn waves-effect waves-brown waves-ripple">Home</a></li>
+                <li class="menu-active waves-effect active" style="height:5px;"><a href="#hero">Home</a></li>
+                <li><a href="#about" class="btn waves-effect waves-brown waves-ripple">About</a></li>
+                <li><a href="#facts" class="btn waves-effect waves-brown waves-ripple">Stats</a></li>
                 <li><a href="/projects" class="btn waves-effect waves-brown waves-ripple">Projects</a></li>
                 <li><a href="/posts" class="btn waves-effect waves-brown waves-ripple">Blogs</a></li>
                 <li><a href="/team" class="btn waves-effect waves-brown waves-ripple">Team</a></li>
-                <li><a href="/timeline" class="btn waves-effect waves-brown waves-ripple">Timeline</a></li>
-                <li><a href="#contact" class="btn waves-effect waves-brown waves-ripple">Contact</a></li>
+                <li><a href="/contact" class="btn waves-effect waves-brown waves-ripple">Contact Us</a></li>
             </ul>
         </nav><!-- #nav-menu-container -->
-    </div>
+    </div>    
+</div>
+
 </header><!-- #header -->
 
 <!--==========================
@@ -215,7 +218,6 @@ Header
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
               <div class="icon"><a href=""><i class="fa fa-photo"></i></a></div>
@@ -238,7 +240,6 @@ Header
             </div>
           </div>
         </div>
-
       </div>
     </section><!-- #services -->
 
@@ -270,7 +271,6 @@ Header
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
         <div class="row">
-
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">All</li>
@@ -281,7 +281,6 @@ Header
             </ul>
           </div>
         </div>
-
         <div class="row" id="portfolio-wrapper">
           <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <a href="">
@@ -292,7 +291,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <a href="">
               <img src="img/portfolio/web2.jpg" alt="">
@@ -302,7 +300,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <a href="">
               <img src="img/portfolio/app3.jpg" alt="">
@@ -312,7 +309,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <a href="">
               <img src="img/portfolio/card1.jpg" alt="">
@@ -322,7 +318,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <a href="">
               <img src="img/portfolio/card2.jpg" alt="">
@@ -332,7 +327,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <a href="">
               <img src="img/portfolio/web3.jpg" alt="">
@@ -342,7 +336,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <a href="">
               <img src="img/portfolio/card3.jpg" alt="">
@@ -352,7 +345,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <a href="">
               <img src="img/portfolio/app2.jpg" alt="">
@@ -362,7 +354,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <a href="">
               <img src="img/portfolio/logo1.jpg" alt="">
@@ -372,7 +363,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <a href="">
               <img src="img/portfolio/logo3.jpg" alt="">
@@ -382,7 +372,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <a href="">
               <img src="img/portfolio/web1.jpg" alt="">
@@ -392,7 +381,6 @@ Header
               </div>
             </a>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <a href="">
               <img src="img/portfolio/logo2.jpg" alt="">
@@ -402,9 +390,7 @@ Header
               </div>
             </a>
           </div>
-
         </div>
-
       </div>
     </section><!-- #portfolio -->
     <!--==========================
