--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -26,7 +26,7 @@
 <!--==========================
 Header
 ============================-->
-<header id="header">
+<header id="header page-header">
     <div class="container">
     <div>
         <div id="logo" class="pull-left">
